# intuitiveai

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.local  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  oidc.py
app/api/v1/: router.py
app/api/v1/endpoints/: flavors.py  health.py  images.py  tasks.py  vm_actions.py  vms.py
app/core/: config.py  exceptions.py  handlers.py  logging.py  middleware.py
app/schemas/: common.py  enums.py  flavor.py  health.py  image.py  task.py  vm_actions.py  vms.py
app/services/: _compute.py  _image.py  base.py  openstack_service.py  task_store.py
app/workers/: main.py  tasks.py
docs/: ARCHITECTURE.md  postman_collection.json  postman_collection_oidc.json
keycloak/: realm-vm-api.json
scripts/: get_tokens.py  seed_mock.py
terraform/provider-vmapi/: README.md  go.mod  go.sum  main.go
terraform/provider-vmapi/examples/basic/: main.tf
terraform/provider-vmapi/internal/provider/: client.go  data_source_flavors.go  data_source_images.go  provider.go  provider_acc_test.go  resource_vm.go  resource_volume.go
tests/: conftest.py
tests/integration/: test_auth.py  test_flavors.py  test_health.py  test_images.py  test_tasks.py  test_vm_actions.py  test_vms.py
tests/local/: app.py
tests/mocks/: factories.py  openstack.py
tests/unit/: test_config.py  test_deps.py  test_handlers.py  test_logging.py  test_oidc.py  test_workers.py
tests/unit/services/: conftest.py  test_compute.py  test_facade.py  test_images.py  test_task_store.py
